<resources>
    <string name="app_name">Syena</string>
    <string name="generate_code_text">Enter the displayed text in the device that you want to tag.</string>
    <string name="scan_code_text">Enter the text from the other device to tag.</string>

    <string-array name="interval_unit">
        <item>Sec</item>
    </string-array>
    <string-array name="time_interval">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>

    <!--text messages-->
    <string name="choose_time_interval">Choose Time Interval</string>
    <string name="defaultStatusMessage">Fetching location</string>
    <string name="statusMessage">%1$s <i>%2$.1f %3$s away</i></string>
    <string name="errorStatusMessage">Could not get the location</string>
    <string name="defaultDetailedMessage">Fetching the detailed status&#8230;</string>
    <string name="detailedMessage">Approx. %1$.1f %2$s away. Last identified location- %3$f,%4$f.</string>
    <string name="pin_generate_text">A 4-digit pin has been generated and sent to you requesterEmail address. Please enter that pin in the following text box.</string>
    <string name="sendingText">Sending</string>
    <string name="enter_text">Enter</string>
    <string name="err_text_member_not_found">You are not registered yet</string>
    <string name="err_text_member_not_active">Your login is not yet activated</string>
    <string name="nick_name_string">Nick name</string>
    <string name="email_label">Email</string>
    <string name="display_name_string">Display name</string>
    <string name="watcher_status_label_string">Status</string>
    <string name="watcher_watching_since_label_string">Watching Since</string>
    <string name="profile_pic_content_desc">Profile pic</string>


    <!--params-->
    <string name="hp_Installation_Id">Installation-Id</string>
    <string name="generating_tag_code">..</string>
    <string name="email_qp">requester</string>

    <!--urls-->
    <string name="server_url">http://117.201.219.198:7979/syena-system</string>
    <string name="get_or_create_url">/member/get-or-create?requester=%1$s</string>
    <string name="location_update_url">/member/location</string>
    <string name="get_tag_code_url">/member/tag-code?requester=%1$s</string>
    <string name="post_tag_url">/member/tag?requester=%1$s</string>
    <string name="get_location_request_url">/member/get-location?requester=%1$s&amp;target=%2$s</string>
    <string name="err_text_system_error">System Error Occurred</string>
    <string name="get_start_watch_url">/member/start-watch?requester=%1$s&amp;target=%2$s</string>
    <string name="get_stop_watch_url">/member/stop-watch?requester=%1$s&amp;target=%2$s</string>
    <string name="get_watchers_url">/member/get-watchers?requester=%1$s</string>
    <string name="post_watch_access_url">/member/watch-access?requester=%1$s</string>
    <string name="pin_verify_url">/member/add?requester=%1$s</string>
    <string name="get_watches_url">/member/get-watches?requester=%1$s</string>
    <string name="update_signature_url">/member/update-signature</string>
    <string name="watch_details_url">/member/watch-details?requester=%1$s&amp;target=%2$s</string>
    <string name="delete_watch_url">/member/delete-watch?requester=%1$s&amp;target=%2$s</string>
    <string name="upload_pic_url">/member/upload-pic?requester=%1$s</string>
    <string name="get_profile_pic_url">/member/get-profile-pic?requester=%1$s&amp;target=%2$s</string>
    <string name="cloudinary_config_url">/member/get_cloudinary_config</string>


</resources>
