<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/watcherProfileCollapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/watcherProfilePictureIV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_pic_content_desc"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/small_size_one"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/watcherProfileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30sp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:dividerPadding="3sp"
            android:stretchColumns="*">

            <TableRow>

                <TextView
                    android:id="@+id/watcherEmailLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_label" />

                <TextView
                    android:id="@+id/watcherEmailValueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/watcherDisplayNameLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/display_name_string" />

                <TextView
                    android:id="@+id/watcherDisplayNameValueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/watcherStatusLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watcher_status_label_string" />

                <TextView
                    android:id="@+id/watcherStatusValueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/watcherWatchingSinceLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/watcher_watching_since_label_string" />

                <TextView
                    android:id="@+id/watcherWatchingSinceValueTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />
            </TableRow>

        </TableLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
