<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/small_size_one"
                app:layout_collapseMode="parallax"
                android:id="@+id/memberProfilePictureIV" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/memberProfileToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/parentRL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/profileDetailsRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="20sp">

                <TextView
                    android:id="@+id/emailLabelTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/emailValueTV"
                    android:layout_alignBottom="@+id/emailValueTV"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="31dp"
                    android:text="@string/email_label" />

                <TextView
                    android:id="@+id/emailValueTV"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="11sp"
                    android:layout_width="200sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/nickNameRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="20sp"
                android:layout_below="@+id/profileDetailsRL">

                <TextView
                    android:id="@+id/nickNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/nickNameET"
                    android:layout_alignBottom="@+id/nickNameET"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="31dp"
                    android:text="@string/nick_name_string" />

                <EditText
                    android:id="@+id/nickNameET"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="11sp"
                    android:background="@drawable/rounded_corners_bg"
                    android:maxLines="1"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/timeIntervalRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp"
                android:layout_below="@+id/nickNameRL">


                <Spinner
                    android:id="@+id/intervalUnitSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="20sp"
                    android:entries="@array/interval_unit"
                    android:prompt="@string/choose_time_interval"
                    android:spinnerMode="dialog" />

                <TextView
                    android:id="@+id/interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="31dp"
                    android:text="Select Interval" />

                <Spinner
                    android:id="@+id/timeIntervalSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="39dp"
                    android:layout_toStartOf="@+id/intervalUnitSpinner"
                    android:entries="@array/time_interval"
                    android:prompt="@string/choose_time_interval"
                    android:spinnerMode="dialog" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/safeDistanceRL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/timeIntervalRL"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="10sp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/distanceTextView"

                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/safeDistanceEditText"
                    android:layout_toRightOf="@+id/safeDistanceEditText"
                    android:paddingLeft="8sp"
                    android:text="Meters" />

                <TextView
                    android:id="@+id/distanceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="31dp"
                    android:text="Safe Distance" />

                <EditText
                    android:id="@+id/safeDistanceEditText"
                    android:layout_width="100sp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="11dp"
                    android:layout_marginStart="47dp"
                    android:layout_toEndOf="@+id/distanceTextView"
                    android:background="@drawable/rounded_corners_bg"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:selectAllOnFocus="true" />
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
